# Anydoor

./: .gitignore  .gitleaks.toml  .secrets.baseline  .trufflehogignore  MakeFile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  dependencies.yml  release.yml  security-scan.yml
anydoor/: __init__.py
anydoor/consoles/: application.py  chat.py  keepass.py  secret_command.py  secrets.py
anydoor/dbs/: __init__.py  base.py  clickhouse.py  delta.py  kafka.py  postgres.py  questdb.py  spark.py  sql_runner.py  sqlite.py  taos.py
anydoor/llms/conversation/: chat.py  runner.py
anydoor/llms/functions/: cost.py  token.py
anydoor/llms/prompts/: base.py
anydoor/quant/: binance.py  stock_utils.py
anydoor/utils/: __init__.py  cache.py  check.py  concurrent.py  container.py  keepass.py  load_config.py  log.py  proxy.py  s3_file_sync.py  secret.py  singleton.py  time.py  vault.py
anydoor/utils/config/: __init__.py  config_loader.py  load_hydra.py
anydoor/utils/message/: __init__.py  base.py  feishu.py  qywx.py  telegram.py
docker/: config.hcl  docker-compose.yaml
tests/: decorators.py
tests/dbs/: test_clickhouse.py  test_delta.py  test_kafka.py  test_postgres.py  test_quest_db.py  test_sqlite.py
tests/llms/: test_joke_creater.py
tests/utils/: add_secret.py  add_vault.py  test_cache.py  test_check.py  test_config.py  test_feishu.py  test_load_hydra.py  test_logger.py  test_message.py  test_proxy.py  test_s3_file_sync.py  test_secrets.py  test_time.py  test_vault.py
tests/utils/assets/: example_config.yaml
