[project]
authors = [{ name = "veinkr", email = "veinkr.finch@gmail.com" }]
name = "anydoor"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "aiohttp>=3.11.14",
    "boto3>=1.37.16",
    "bs4>=0.0.2",
    "clickhouse-sqlalchemy>=0.3.2",
    "cloudpathlib>=0.21.0",
    "confluent-kafka>=2.8.2",
    "deltalake>=0.25.4",
    "func-timeout>=4.3.5",
    "hatchling>=1.27.0",
    "hvac>=2.3.0",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "numpy>=2.2.4",
    "pandas>=2.2.2",
    "polars>=1.25.2",
    "psycopg2-binary>=2.9.9",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
